# cpp-python-interop-demo

./: .clangd  .gitignore  CMakeLists.txt  cpp_python_interop.pyi  custom_module.cpp  custom_module_bindings.cpp  main.cpp  main.py  model.xml  pyproject.toml  setup.py
