[project]
name = "cpp_python_interop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mujoco>=3.2.6",
    "nanobind>=2.4.0",
    "pybind11>=2.13.6",
    "scikit-build-core>=0.10.7",
    "setuptools>=75.6.0",
]

[build-system]
requires = ["setuptools>=75.6.0", "scikit-build-core<=0.10.7", "nanobind>=2.4.0", "mujoco>=3.2.6"]
build-backend = "scikit_build_core.setuptools.build_meta"

[tool.cibuildwheel.macos.environment]
# Needed for full C++17 support
MACOSX_DEPLOYMENT_TARGET = "10.14"
